# astral_map

./: LICENSE  README.md  Untitled.jhd  arquivo.ini  pyproject.toml
app/: __init__.py
app/extensions/: configuration.py  pdf_utils.py
app/forms/: astral_vedic_form.py  config_forms.py
app/models/: houses_model.py  nakshatra_model.py  planet_phala_model.py
app/routes/main/: __init__.py  views.py
app/static/css/: style.css
app/templates/: layout.html
app/templates/includes/: house_modal.html  settings_modal.html
app/templates/pages/: index.html
app/utils/helpers/: utils.py
app/utils/pdf/: content.py  cover.py  generate.py  image.py  loader.py  reader.py  styles.py  toc.py
config/: settings.toml
